@@ -1,3 +1,7 @@
+2007-06-07 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.07)
+
+	* Makefile.PL: Set the distribution_type to script to see if PAUSE will index it
+	
 2007-06-07 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.06)
 
 	* Test.php: Patch from #27487 by ANDYA, isa_ok() now handles subclasses
